# eventyay-tickets-stripe

./: MANIFEST.in  Makefile  pretixplugin.toml  pyproject.toml  setup.cfg
eventyay_stripe/: __init__.py  apps.py  forms.py  payment.py  signals.py  tasks.py  urls.py  views.py
eventyay_stripe/management/commands/: stripe_connect_fill_countries.py
eventyay_stripe/static/plugins/stripe/: eventyay-stripe.js
eventyay_stripe/templates/plugins/stripe/: checkout_payment_confirm.html  control.html  pending.html  presale_head.html  redirect.html  sca.html  sca_return.html
eventyay_stripe/tests/: test_checkout.py  test_provider.py  test_settings.py  test_webhook.py  test_webhook_signature.py
